@@ -260,8 +260,10 @@ sources = files(
   'src/dylib.c',
   'src/instance.c',
   'src/lib.c',
+  'src/load_skimmer.c',
   'src/node.c',
   'src/node_hash.c',
+  'src/node_skimmer.c',
   'src/plugin.c',
   'src/pluginclass.c',
   'src/port.c',
