@@ -10,9 +10,10 @@ lilv (0.24.27) unstable; urgency=medium
   * Fix potential memory leak in lilv_world_set_option()
   * Gracefully ignore and warn about non-directories in LV2_PATH
   * Improve loading performance when many plugin versions are found
+  * Improve performance when loading and deleting state
   * Reduce temporary node allocations during query operations
 
- -- David Robillard <d@drobilla.net>  Sat, 06 Sep 2025 19:44:02 +0000
+ -- David Robillard <d@drobilla.net>  Fri, 26 Sep 2025 02:42:00 +0000
 
 lilv (0.24.26) stable; urgency=medium
 
